<resources>
    <string name="app_name">iDocsPer</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="meus">Você</string>
    <string name="mae">Mãe</string>
    <string name="pai">Pai</string>
    <string name="data_de_envio">Data de Envio:</string>
    <string name="arquivo">Arquivo:</string>
    <string name="excluir">Excluir</string>
    <string name="enviar">Enviar</string>
    <string name="observacoes">Observações</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pin_de_acesso">PIN de acesso</string>
    <string name="pin">PIN</string>
    <string name="documentos">Documentos</string>
    <string name="atualizar">Atualizar</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>